syntax = "proto3";
package v1;

import "google/api/annotations.proto";

option go_package = "./movie";

message Movies {
    int32 ID = 1;
    string MovieName = 2;
    string MovieGenre = 3;
    string Director = 4;
    float Rating = 5;
}

// Service to manage list of todo tasks
service MoviesService {
    rpc CreateMovies(CreateRequest) returns (CreateResponse) {
        option (google.api.http) = {
            post: "/movie/movies"
            body: "*"
        };
    };

    rpc GetAllMovies(ReadAllRequest) returns (ReadAllResponse) {
        option (google.api.http) = {
            get: "/movie/movies"
        };
    };

    rpc GetMovieByGenre(ReadRequest) returns (ReadResponse) {
        option (google.api.http) = {
            get: "/movie/movies/{MovieGenre}"
        };
    };

    rpc UpdateMovies(UpdateRequest) returns (UpdateResponse) {
        option (google.api.http) = {
            put: "/movie/movies/{MovieName}"
            body: "*"
        };
    };

    rpc DeleteMovies(DeleteRequest) returns (DeleteResponse) {
        option (google.api.http) = {
            delete: "/movie/movies/{MovieName}"
        };
    };
}

message CreateRequest {
    string api = 1;
    Movies movies = 2;
}

message CreateResponse {
    string api = 1;
    Movies movies = 2;
}

message ReadAllRequest {
    string api = 1;
}

message ReadAllResponse {
    string api = 1;
    repeated Movies movies = 2;
}

message ReadRequest {
    string api = 1;
    string MovieGenre = 2;
}

message ReadResponse {
    string api = 1;
    repeated Movies movies = 2;
}

message UpdateRequest {
    string api = 1;
    string MovieName = 2;
}

message UpdateResponse {
    string api = 1;
}

message DeleteRequest {
    string api = 1;
    string MovieName = 2;
}

message DeleteResponse{
    // API versioning: it is my best practice to specify version explicitly
    string api = 1;
}